k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-clients-deployment
  namespace: payetonkawa-prod
  labels:
    app: gestion-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-client
  template:
    metadata:
      labels:
        app: gestion-client
    spec:
      containers:
        - name: gestion-client
          image: registry.germainleignel.com/paye-ton-kawa/gestion-client:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
