k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-database-deployment
  namespace: payetonkawa-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients-database
  template:
    metadata:
      labels:
        app: clients-database
    spec:
      containers:
        - name: clients-database
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
