k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-client-service
  namespace: payetonkawa-prod
  labels:
    app: gestion-client
spec:
  selector:
    app: gestion-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
